Fri Jul 22 11:22:20 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* backport r32606 from trunk.

	* ext/openssl/ossl_digest.c: Check return value of EVP_DigestInit_ex.
	* ext/openssl/ossl_hmac.c: Check return value of HMAC_Init_ex.
	  Thanks, Jared Jennings, for the patch.
	  [ Ruby 1.9 - Bug #4944 ] [ruby-core:37670]

Fri Jul 22 09:17:43 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* backport r32604 from trunk.

	* ext/openssl/ossl_engine.c: Avoid double free of ENGINE reference.
	* test/openssl/test_engine.rb: Add a test for it.
	  Thanks to Ippei Obayashi for providing the patch.
	  [ Ruby 1.9 - Bug #5062 ] [ruby-dev:44173]

Fri Jul 22 06:39:34 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/csv.rb: Do not modify CSV.generate's argument [ruby-core:38356]

Thu Jul 21 20:02:11 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (set_trace_func, thread_set_trace_func_m): reset tracing
	  state when set_trace_func hook is removed.  This is workaround patch
	  to force to reset tracing state that is broken by continuation call.
	  a patch from James M. Lawrence.  [Feature #4347] [ruby-core:34998]

	* test/ruby/test_continuation.rb (class TestContinuation): add a test
	  for above.  a patch from James M. Lawrence.

Thu Jul 21 20:59:59 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (discard_cmsg): workaround for MacOS X Lion.


Thu Jul 21 07:07:57 2011  Tanaka Akira  <akr@fsij.org>

	* backport r32579, r32581, r32587 by akr and r32588 by kazu.

	r32579:

	* io.c (rb_update_max_fd): new function.

	* internal.h (rb_update_max_fd): declare rb_update_max_fd.

	* thread_pthread.c (rb_thread_create_timer_thread): update max fd when
	  timer thread pipe is created.

	r32581:

	* io.c (UPDATE_MAXFD): removed.

	r32587:

	* include/ruby/intern.h (rb_update_max_fd): declaration moved from
	  internal.h.

	* file.c: ditto.

	* io.c: call rb_update_max_fd for each new fds.

	* process.c: ditto.

	* random.c: ditto.

	* ruby.c: ditto.
